public interface GeneradorReporte {
    
    public void generar(String contenido);
}
